dev-00: Update sample files to support JDK13 both IDE and Gradle scripts