@@ -6,8 +6,8 @@ apply plugin: 'signing'
 
 mainClassName = 'com.tools.jdk.basic.StringUtils'
 // sourceCompatibility cannot be higher than targetCompatibility, this is a restriction of javac.
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 13
+targetCompatibility = 13
 version = '1.0.0'
 group = 'org.commontools'
 description = "A bootstrap Java project with gradle,  Mockito, FEST-Assert 2 and Cobertura"
@@ -179,8 +179,12 @@ sourceSets {
     }
 }
 
-
+// In this case, we must make the package accessible by adding the following compilers args to the build.gradle file:
 tasks.withType(JavaCompile) {
+    options.compilerArgs += ["--add-exports", "java.base/sun.security.x509=ALL-UNNAMED"]
+    options.compilerArgs += ["--add-exports", "java.base/sun.security.tools.keytool=ALL-UNNAMED"]
+//    options.compilerArgs += ["--add-modules", "java.xml.ws.annotation"] // not found
+    options.compilerArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
     options.encoding = 'UTF-8'
 }
 
@@ -217,6 +221,8 @@ gradle.buildFinished { buildResult ->
     println "TBU BUILD FINISHED"
     println "build failure infomration if any - " + buildResult.failure
 }
+
+
 
 
 tasks.addRule('Rule Usage: ping<Hostname>') { String taskName ->
